@@ -11,9 +11,10 @@ merlinux GmbH, Germany, office at merlinux eu
 
 Contributors include:: 
 
+Ross Lawley
+Ralf Schmitt
 Chris Lamb 
 Harald Armin Massa
-Ralf Schmitt
 Martijn Faassen
 Ian Bicking 
 Jan Balster
