@@ -8,7 +8,8 @@ from py.impl.test.outcome import Skipped
 
 default_plugins = (
     "default runner capture terminal mark skipping tmpdir monkeypatch "
-    "recwarn pdb pastebin unittest helpconfig nose assertion genscript").split()
+    "recwarn pdb pastebin unittest helpconfig nose assertion genscript "
+    "logxml").split()
 
 def check_old_use(mod, modname):
     clsname = modname[len('pytest_'):].capitalize() + "Plugin" 
