@@ -1,6 +1,9 @@
 Changes between 1.X and 1.1.1
 =====================================
 
+- new junitxml plugin: --xml=path will generate a junit style xml file
+  which is parseable e.g. by the hudson continous integration server.
+
 - new option: --genscript=path will generate a standalone py.test script
   which will not need any libraries installed.  thanks to Ralf Schmitt. 
 
